tables , calendar page

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -7,6 +7,7 @@
 @import "plugins/bootstrap-colorpicker";
 @import "plugins/icheck";
 @import "plugins/select2";
+@import "plugins/fullcalendar";
 @import "inc/adminLTE";
 @import "inc/all-skins";
 @import "inc/bootstrap3-wysihtml5";
